# GIScriptEditor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
GIScript/: CMakeLists.txt  GIScript.cpp  GIScript.ixx  script.cpp  script.ixx
GIScriptEditor/: CMakeLists.txt  GIScriptEditor.vcxproj  GIScriptEditor.vcxproj.filters  compiler.cpp  custom_widgets.ixx  find_reference_window.cpp  main.cpp  main_window.cpp  node_reference_item.cpp  render.cpp  render.ixx  resource.h  widgets.cpp  widgets.ixx  window.cpp  window.ixx  windows.ixx
